fix!: rename {name}-9-contrast to {name}-contrast

--- a/static/css/components/back-to-top.css
+++ b/static/css/components/back-to-top.css
@@ -21,7 +21,7 @@
 }
 
 .back-to-top:hover {
-  color: var(--accent-9-contrast);
+  color: var(--accentt-contrast);
   background: var(--accent-9);
 }
 
